--- a/styles.css
+++ b/styles.css
@@ -181,15 +181,23 @@ button:disabled {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
+    width: 60px;
+    height: 60px;
+    min-width: 60px;
+    min-height: 60px;
 }
 
 .icon-item img {
-    width: 50px;
-    height: 50px;
+    max-width: 50px;
+    max-height: 50px;
+    width: auto;
+    height: auto;
     object-fit: contain;
     border: 1px solid #eee;
     padding: 5px;
+    background: white;
 }
 
 .icon-item .delete-icon {
