--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -283,6 +283,7 @@ button:disabled {
 
 #identifier {
     font-family: monospace;
+    font-size: 2em;
     margin-bottom: 10px;
     text-align: right; /* Align ID to the right to match PDF */
 }
